# playdede_scraper

./: README.md  pyproject.toml  scrapy.cfg
plusdede_scraper/: items.py  middlewares.py  pipelines.py  settings.py
plusdede_scraper/requests/: selenium_request.py
plusdede_scraper/spiders/: playdede.py
